--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,9 +1,9 @@
 :root {
     --cinza: #eae6e6;
-    --vermelha: #f50707;
-    --vermelha-escura: #af303f;
+    --vermelha: #cd07f5;
+    --vermelha-escura: #380424;
     --branca: #fff;
-    --luz: rgb(229, 255, 0);
+    --luz: rgb(0, 153, 255);
   }
   
   body {
@@ -24,7 +24,7 @@
   
   .teclado {
     background: linear-gradient(to bottom, #eeeeee 0%,#d0afaf 100%);
-    box-shadow: 6px 8px 0 6px #8c4646, 10px 10px 10px #000;
+    box-shadow: 6px 8px 0 6px #70468c, 10px 10px 10px #000;
     border-radius: 30px;
     display: grid;
     gap: 10px;
